.deploy/elgato-rs/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: elgato-rs
  name: elgato-rs
  namespace: kj800x
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: elgato-rs
  type: LoadBalancer
