.deploy/elgato-rs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: elgato-rs
  annotations:
    external-dns.alpha.kubernetes.io/hostname: elgato.home.coolkev.com
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: elgato-rs
  namespace: kj800x
spec:
  ingressClassName: traefik
  rules:
    - host: elgato.home.coolkev.com
      http:
        paths:
          - backend:
              service:
                name: elgato-rs
                port:
                  number: 80
            path: /
            pathType: Prefix
